syntax = "proto3";
package dipstick.isotp.v1;

import "google/protobuf/timestamp.proto";

// ISO-TP frame
message Frame {
  // Frame payload
  bytes data = 1;
  // Timestamp when the frame was received. Ignored when sending.
  google.protobuf.Timestamp received_at = 7;
}
